--- a/css/style-over.css
+++ b/css/style-over.css
@@ -90,7 +90,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #0702d8;
     text-decoration: none;
 }
 
